# actix-template

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
src/: db.rs  handlers.rs  main.rs  mw.rs
templates/: posts.html
